Color contrast ratio thresholds correction

--- a/src/app/precos/Precos.module.css
+++ b/src/app/precos/Precos.module.css
@@ -41,7 +41,7 @@
 
 .imageCaption987 {
     font-size: 0.9rem;
-    color: #777;
+    color: #525252;
     margin-top: 5px;
 }
 
